# openadmet-demos

./: .gitignore  .readthedocs.yml  CNAME  MAINTAINER.md  README.md  cpu_env.yaml  env.yaml  environment.yaml  environment.yml  gpu_env.yaml  openadmet-demos.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  ci.yml  make_installer.yaml
demos/: README.md
demos/01_Data_Curation/: 01_Curate_ChEMBL_Data.ipynb  01_Curate_Data_ChEMBL.ipynb
demos/02_Model_Training/: 02.1_Training_models_with_Anvil.ipynb  02.2_Anvil_deep_dive.ipynb  02_Training_Models.ipynb  02_Training_models_with_Anvil.ipynb  anvil_chemprop.yaml  anvil_chemprop_multitask.yaml  anvil_lgbm.yaml  anvil_multitask.yaml  run_anvil.sbatch
demos/03_Model_Comparison/: 03_Comparing_Models.ipynb
demos/04_Ensemble_Model_Training/: 04_Ensemble_Model_Training.ipynb  04_Ensemble_Model_Training_Active_Learning.ipynb  anvil_ensemble.yaml  anvil_ensemble_chemprop.yaml  run_ensemble.sbatch
demos/05_Ensemble_Model_Inference/: 05_Model_Ensemble_Inference.ipynb  discovery_compounds.csv  predictions.csv
demos/1.1_Curating_external_datasets/: 1.1_Curating_external_datasets.ipynb
demos/1_Data_Curation/: 1.1_Curating_external_datasets.ipynb  data_description.yaml
demos/2.1_Training_models_with_Anvil/: 2.1_Training_models_with_Anvil.ipynb
demos/3.1_Comparing_models/: 3.1_Comparing_models.ipynb
docs/: conf.py  requirements.yaml
showcase/: OpenADMET_Models_Showcase.ipynb  OpenADMET_showcase.ipynb  anvil_lgbm-cv.yaml  anvil_lgbm.yaml  cleaned_cyp3a4.csv  compounds_for_inference.csv  predictions.csv
(+438 files in other folders)
