[tool.poetry]
name = "openadmet-demos"
version = "0.1.0"
description = "an environment for running openadmet-demos"
authors = ["cynthiaxu04 <cynthiaxu04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.2"
pandas = "^2.3.1"
scikit-learn = "^1.7.1"
rich = "^14.1.0"
intake = "^2.0.8"
joblib = "^1.5.1"
ipython = "^9.4.0"
jupyterlab = "^4.4.5"
intake-parquet = "^0.3.0"
zarr = ">=3.0.0"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
